--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     ],
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0"
+        "cakephp/orm": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "cakephp/cakephp": "~3.0"
     },
     "autoload": {
         "psr-4": {
