--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "autoload-dev": {
         "psr-4": {
             "Duplicatable\\Test\\": "tests",
+            "TestApp\\": "tests/test_app/TestApp",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     }
