--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,39 @@
 language: php
 
 php:
-  - 5.4
+  - 7.0
   - 5.5
   - 5.6
-  - 7.0
+  - 7.1
 
-install:
-  - composer self-update
-  - composer install --dev
+dist: trusty
+
+env:
+  global:
+    - DEFAULT=1
+
+matrix:
+  fast_finish: true
+
+  include:
+    - php: 7.0
+      env: PHPCS=1 DEFAULT=0
+
+before_script:
+  - if [[ $TRAVIS_PHP_VERSION != 7.0 ]]; then phpenv config-rm xdebug.ini; fi
+
+  - composer install --prefer-dist --no-interaction
+
+  - sh -c "if [ '$PHPCS' = '1' ]; then composer require cakephp/cakephp-codesniffer; fi"
+
+script:
+  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then phpunit --coverage-clover=clover.xml; fi
+  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION != 7.0 ]]; then phpunit; fi
+
+  - if [[ $PHPCS = 1 ]]; then vendor/bin/phpcs -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests; fi
+
+after_success:
+  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then bash <(curl -s https://codecov.io/bash); fi
+
+notifications:
+  email: false
