--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "cakephp/orm": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "<6.0",
         "cakephp/cakephp": "~3.0"
     },
     "autoload": {
