--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4.16",
-        "cakephp/orm": "~3.0"
+        "php": ">=5.6.0",
+        "cakephp/orm": "3.6.0-beta1"
     },
     "require-dev": {
         "phpunit/phpunit": "<6.0",
-        "cakephp/cakephp": "~3.0"
+        "cakephp/cakephp": "3.6.0-beta1"
     },
     "autoload": {
         "psr-4": {
