--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
-        "cakephp/orm": "3.6.0-beta1"
+        "cakephp/orm": "^3.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "<6.0",
-        "cakephp/cakephp": "3.6.0-beta1"
+        "phpunit/phpunit": "^5.7.14|^6.0",
+        "cakephp/cakephp": "^3.5"
     },
     "autoload": {
         "psr-4": {
