--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,9 @@
             "email": "segy@riesenia.com"
         }
     ],
-    "require": {
-        "cakephp/orm": "^3.5"
-    },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.14|^6.0",
-        "cakephp/cakephp": "^3.5"
+        "cakephp/cakephp": "4.x-dev",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -28,5 +25,7 @@
             "TestApp\\": "tests/test_app/TestApp",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
