--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require-dev": {
-        "cakephp/cakephp": "4.x-dev",
-        "phpunit/phpunit": "^8.0"
+        "cakephp/cakephp": "^4.0",
+        "phpunit/phpunit": "^8.5.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +25,5 @@
             "TestApp\\": "tests/test_app/TestApp",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
