--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
-/tests           export-ignore
-/phpunit.xml     export-ignore
-/.gitattributes  export-ignore
-/.gitignore      export-ignore
-/.travis.yml     export-ignore
+tests export-ignore
+phpunit.xml export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+.travis.yml export-ignore
+psalm.yml export-ignore
+psalm-baseline.yml export-ignore
+.editorconfig export-ignore
