--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ phpunit.xml export-ignore
 psalm.yml export-ignore
 psalm-baseline.yml export-ignore
 .editorconfig export-ignore
+.github export-ignore
