--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "cakephp/orm": "5.x-dev"
+        "cakephp/orm": "^5.0"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "^5.0",
-        "cakephp/cakephp": "5.x-dev",
+        "cakephp/cakephp": "^5.0",
         "phpunit/phpunit": "^10.1"
     },
     "autoload": {
@@ -44,8 +44,6 @@
         "stan-setup": "phive install",
         "test": "phpunit"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
